--- a/nosotros.html
+++ b/nosotros.html
@@ -24,9 +24,44 @@
 
     <main class="contenedor">
         <h1>Nosotros</h1>
-    </main>
+        <div class="nosotros">
+            <div class="nosotros__contenido">
+                <p>Cursus aliquet sodales. Quisque malesuada congue elit, egestas suscipit erat molestie ut. Sed sit amet arcu sit amet diam placerat laoreet. Fusce aliquam, nulla eu rhoncus varius, ipsum velit pretium odio, ac efficitur nulla neque vel risus. Sed rutrum risus sit amet tincidunt vestibulum. Etiam congue, sem vitae viverra feugiat, purus lorem interdum eros, ac gravida nisl lacus ut massa. Duis ex diam, pellentesque ut ante eu, auctor vestibulum ipsum.</p>
 
-    <footer>
+                <p>Pellentesque nec porttitor turpis. In sem nisi, consequat quis ultrices et, rutrum elementum leo. In sit amet pellentesque turpis, sit amet iaculis enim. Quisque quis gravida purus. Mauris suscipit quam non sodales malesuada. Sed neque risus, rhoncus et leo in, eleifend ornare massa. Nulla ullamcorper, ex a tristique ullamcorper, mi augue egestas purus, fermentum lacinia tellus neque vel tortor.</p>
+
+            </div>
+            <img src="img/nosotros.jpg" alt="imagen nosotros" class="nosotros__imagen">
+        </div>
+    </main>
+    <section class="contenedor comprar">
+        <h2 class="comprar_titulo">¿Porqué Comprar con nosotros?</h2>
+        <div class="bloques">
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_1.png" alt="porque comprar">
+                <h3 class="bloque__titulo">El Mejor Precio</h3>
+                <p>In sem nisi, consequat quis ultrices et, rutrum elementum leo.</p>
+            </div> <!--.bloque-->
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_2.png" alt="porque comprar">
+                <h3 class="bloque__titulo">Para Devs</h3>
+                <p>In sem nisi, consequat quis ultrices et, rutrum elementum leo.</p>
+            </div> <!--.bloque-->
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_3.png" alt="porque comprar">
+                <h3 class="bloque__titulo">Envío Gratis</h3>
+                <p>In sem nisi, consequat quis ultrices et, rutrum elementum leo.</p>
+            </div> <!--.bloque-->
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_4.png" alt="porque comprar">
+                <h3 class="bloque__titulo">La Mejor Calidad</h3>
+                <p>In sem nisi, consequat quis ultrices et, rutrum elementum leo.</p>
+            </div> <!--.bloque-->
+        </div><!--.bloques-->
+
+    </section>
+
+    <footer class="footer">
         <p class="footer__texto">Front End Sotre - Todos los derechos reservados 2023</p>
     </footer>
 </body>
