--- a/productos.html
+++ b/productos.html
@@ -23,7 +23,25 @@
     </nav>
 
     <main class="contenedor">
-        <h1>Nuestros Productos</h1>
+        <h1>React JS</h1>
+        <div class="camisa">
+            <img src="img/3.jpg" alt="Imagen del Producto" class="camisa__imagen">
+
+            <div class="camisa__contenido">
+                <p>Pellentesque nec porttitor turpis. In sem nisi, consequat quis ultrices et, rutrum elementum leo. In sit amet pellentesque turpis, sit amet iaculis enim. Quisque quis gravida purus. Mauris suscipit quam non sodales malesuada.</p>
+                <form action="" class="formulario">
+                    <select class="formulario__campo">
+                        <option value="" disabled selected>-- Seleccionar Talla -- </option>
+                        <option value="">Chica</option>
+                        <option value="">Mediana</option>
+                        <option value="">Grande</option>
+                    </select>
+                    <input class="formulario__campo" type="number" placeholder="Cantidad" min="1">
+                    <input class="formulario__submit" type="submit" value="Agregar al Carrito">
+                </form>
+
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
